# easy_kicad

./: .gitignore  LICENSE  PLAN.md  README.md  easy_kicad.spec  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/assets/icons/: easy_kicad.icns
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: capture-readme.mjs
frontend/src/: App.vue  branding.ts  style.css
frontend/src/components/: ModelPreview.vue  PreviewCard.vue  SvgPreview.vue
frontend/src/types/: api.ts
packaging/windows/: easy_kicad_installer.nsi
scripts/: build_icon_assets.py  build_macos_dmg.py  build_release.py  build_windows_installer.py  smoke_test_macos_dmg.py  smoke_test_windows_installer.py
src/easy_kicad/: __init__.py  app.py  main.py  metadata.py
src/easy_kicad/api/: routes.py
src/easy_kicad/core/: network.py  release.py  settings.py
src/easy_kicad/schemas/: part.py  settings.py
src/easy_kicad/services/: easyeda_adapter.py  import_service.py  models.py  preview_service.py
src/easy_kicad/web/: index.html
src/easy_kicad/web/assets/: index--un0rt0v.js  index-2qnekPjX.js  index-3rnrl0fi.js  index-BYFQXvw5.css  index-BaJqrobN.css  index-C-iA3em4.js  index-C5Os2rzd.css  index-CHsnf9el.css  index-CR5xr0zW.css  index-CWw6bp86.js  index-CqrXe4rm.css  index-CsMrxWz3.js  index-CvHXE9tQ.css  index-DLrISJTM.js  index-DmM5ACRW.css  index-DqoehTPZ.js  index-ZSD7CsC5.js  index-fWULrrG2.js  index-g63AeTIm.css  index-reqmu9D4.js
tests/: conftest.py  helpers.py  test_api.py  test_import_service.py  test_main.py  test_network.py  test_packaging_scripts.py  test_preview_service.py  test_release.py  test_settings_store.py
